fixing styles and scroll on mobile

--- a/src/components/SearchList/SearchList.css
+++ b/src/components/SearchList/SearchList.css
@@ -8,7 +8,13 @@
     justify-content: center;
     align-items: center;
 }
-
+.searchList_empty{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
 .SearchList_Container ul {
     width: 100%;
     height: 100%;
